# ThinkCloud-for-web

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  config.py  fastapi_main.py  main.py  providers.py  pyproject.toml  requirements.txt
assets/: custom.css
doc/: CHEATSHEET.md  DARK_THEME_README.md  DROPDOWN_FIX.md  MODEL_SELECTOR_README.md  PORT_FINDER_README.md  QUICKSTART.md  UI_RESTRUCTURE.md  UV_RUFF_GUIDE.md  advanced_features_improvement.md  deep_think_logging_fix.md  deep_thinking_feature.md  deep_thinking_quickstart.md  fastapi_usage_guide.md  final_fix_generator_issue.md  generator_response_fix.md  lacan_case_study.md  logging_guide.md  parameter_control_feature.md  performance_optimization_guide.md  quickstart_guide.md  web_search_feature.md
scripts/: README.md  setup_uv_ruff.ps1  setup_uv_ruff.sh
src/: CLAUDE.md  api_service.py  async_api_service.py  async_deep_think.py  cache_manager.py  chat_manager.py  config.py  deep_think.py  error_handler.py  event_handlers.py  fastapi_server.py  providers.py  response_handlers.py  session_store.py  ui_client.py  ui_composer.py
src/deep_think/: __init__.py  formatter.py  orchestrator.py  utils.py
src/deep_think/core/: __init__.py  interfaces.py  models.py
src/deep_think/prompts/: __init__.py  base.py  manager.py  templates.py
src/deep_think/stages/: __init__.py  base.py  planner.py  reviewer.py  solver.py  synthesizer.py
src/logging/: __init__.py  config.py  formatters.py  logger.py
src/tools/: __init__.py  web_search.py
tests/: test_api.py  test_complete_deep_think.py  test_deep_think.py  test_deep_thinking.py  test_deepseek_fix.py  test_fastapi.py  test_model_selector.py  test_new_features.py  test_port_finder.py  test_ui.py  test_web_search.py
