[project]
name = "ThinkCloud-for-web"
version = "0.1.0"
description = "多提供商 LLM 聊天客户端 (ThinkCloud for Web)"
authors = [
    { name = "Misaka Misaka", email = "wyyxshao@163.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "gradio>=4.0.0",
    "cerebras-cloud-sdk>=1.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ================================
# Ruff 配置
# ================================
[tool.ruff]
# 目标 Python 版本
target-version = "py38"

# 每行最大字符数
line-length = 100

# 扫描的文件
include = ["*.py", "*.pyi"]
extend-include = ["*.ipynb"]

# 排除的目录
extend-exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# 启用的规则集
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort (import 排序)
    "N", # pep8-naming
    "UP", # pyupgrade (现代化 Python 语法)
    "B", # flake8-bugbear (常见错误)
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff 特定规则
]

# 忽略的规则
ignore = [
    "E501", # 行过长 (由 formatter 处理)
    "B008", # 函数调用作为默认参数 (Gradio 常用模式)
    "UP007", # Optional[X] vs X | None (兼容性考虑)
    "RUF001", # 字符串中的全角字符 (中文项目正常)
    "RUF002", # 文档字符串中的全角字符 (中文项目正常)
    "RUF003", # 注释中的全角字符 (中文项目正常)
]

# 每个文件允许的未使用导入
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
# 测试文件允许的规则放宽
"tests/**/*.py" = ["S101"]  # 允许 assert
"__init__.py" = ["F401"]    # 允许未使用导入

[tool.ruff.lint.isort]
# Import 排序配置
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# 格式化配置
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ================================
# Pytest 配置
# ================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--strict-markers",
    "-p no:cov",
]
